k8s-manifests/01-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment
spec:
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: reju/spring-app:v1.0
      #  resources:
      #    requests:
      #      memory: "32Mi"
      #      cpu: "100m"
      #    limits:
      #      memory: "128Mi"
      #      cpu: "500m"
        ports:
        - containerPort: 8080
