k8s-manifests/02-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
  - port: 8080
    targetPort: 8080
