k8s-manifests/03-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: spring-app-service
              servicePort: 8080
      host: music.qtphack.com
