k8s-manifests/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment
spec:
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: reju/spring-app:v1.0
      #  resources:
      #    requests:
      #      memory: "32Mi"
      #      cpu: "100m"
      #    limits:
      #      memory: "128Mi"
      #      cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: /spring
            backend:
              serviceName: spring-app-service
              servicePort: 8080
      host: music.tcl.com
